# GevProgRoadFighter

./: .travis.yml  CMakeLists.txt  README.md  ReportGevProgRoadfighter.docx  TODO.txt  TempDesign.txt  doxconfig  main.cpp  travis2.4.2Test.txt
GameLogic/: CMakeLists.txt  highScores.json
GameLogic/Source/: EntityTransporter.cpp  Entity_Factory.cpp  Entity_Factory_base.cpp  GLL_Entity_Factory.cpp  HighScoreManager.cpp  InputController.cpp  Location.cpp  MoveController.cpp  RoadFighterGame.cpp
GameLogic/Source/Entities/: BonusCar.cpp  Bullet.cpp  Car.cpp  CollisionObject.cpp  End.cpp  Entity.cpp  MovingObject.cpp  PassingCar.cpp  PlayerCar.cpp  RacingCar.cpp  World.cpp  bonusCar.cpp
GameLogic/Source/Observer/: Observable.cpp  ObserverBase.cpp  ScoreObserver.cpp
GameLogic/Utility/: Clock.cpp  Clock.h  Random.cpp  Random.h
GameLogic/include/: EntityTransporter.h  Entity_Factory.h  Entity_Factory_base.h  GLL_Entity_Factory.h  GllException.h  HighScoreManager.h  InputController.h  Location.h  MoveController.h  RoadFighterGame.h
GameLogic/include/Entities/: BonusCar.h  Bullet.h  Car.h  CollisionObject.h  End.h  Entity.h  EntityInclude.h  MovingObject.h  PassingCar.h  PlayerCar.h  RacingCar.h  World.h  bonusCar.h
GameLogic/include/Observer/: Observable.h  ObserverBase.h  ScoreObserver.h
GameLogic/include/entities/: Bullet.h  Car.h  CollisionObject.h  Entity.h  PassingCar.h  PlayerCar.h
SFMLConversion/: CMakeLists.txt  main.cpp
SFMLConversion/Include/: SFMLRoadFighter.h  SFML_Entity_Factory.h  SFMLconversionException.h  Transformation.h
SFMLConversion/Include/Entities/: SFMLBonusCar.h  SFMLBullet.h  SFMLEnd.h  SFMLEntity.h  SFMLEntitySprite.h  SFMLPassingCar.h  SFMLPlayerCar.h  SFMLRacingCar.h  SFMLWorld.h
SFMLConversion/Source/: SFMLRoadFighter.cpp  SFML_Entity_Factory.cpp  Transformation.cpp
SFMLConversion/Source/entities/: SFMLBonusCar.cpp  SFMLBullet.cpp  SFMLEnd.cpp  SFMLEntity.cpp  SFMLEntitySprite.cpp  SFMLPassingCar.cpp  SFMLPlayerCar.cpp  SFMLRacingCar.cpp  SFMLWorld.cpp
Singletons/: Random.cpp  Random.h
Test/: CMakeLists.txt  EntityTests.cpp  EntityUnitTests.cpp  HighScoreTests.cpp  InputTests.cpp  OberserTests.cpp  mainTest.cpp
Utility/: Clock.cpp  Clock.h
doxygen/html/: BonusCar_8h_source.html  Bullet_8h_source.html  Clock_8h_source.html  CollisionObject_8h_source.html  End_8h_source.html  EntityTransporter_8h.html  EntityTransporter_8h__dep__incl.map  EntityTransporter_8h__dep__incl.md5  EntityTransporter_8h__incl.map  EntityTransporter_8h__incl.md5  EntityTransporter_8h_source.html  Entity_8h_source.html  Entity__Factory__base_8h.html  Entity__Factory__base_8h__dep__incl.map  Entity__Factory__base_8h__dep__incl.md5  Entity__Factory__base_8h__incl.map  Entity__Factory__base_8h__incl.md5  Entity__Factory__base_8h_source.html  GLL__Entity__Factory_8h.html  GLL__Entity__Factory_8h__dep__incl.map  GLL__Entity__Factory_8h__dep__incl.md5  GLL__Entity__Factory_8h__incl.map  GLL__Entity__Factory_8h__incl.md5  GLL__Entity__Factory_8h_source.html  HighScoreManager_8h_source.html  InputController_8h.html  InputController_8h__dep__incl.map  InputController_8h__dep__incl.md5  InputController_8h__incl.map  InputController_8h__incl.md5  InputController_8h_source.html  Location_8h.html  Location_8h__dep__incl.map  Location_8h__dep__incl.md5  Location_8h__incl.map  Location_8h__incl.md5  Location_8h_source.html  MovingObject_8h_source.html  Observable_8h_source.html  ObserverBase_8h_source.html  (+698 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+20 more)
doxygen/latex/: EntityTransporter_8h.tex  EntityTransporter_8h__dep__incl.md5  EntityTransporter_8h__incl.md5  Entity__Factory__base_8h.tex  Entity__Factory__base_8h__dep__incl.md5  Entity__Factory__base_8h__incl.md5  GLL__Entity__Factory_8h.tex  GLL__Entity__Factory_8h__dep__incl.md5  GLL__Entity__Factory_8h__incl.md5  InputController_8h.tex  InputController_8h__dep__incl.md5  InputController_8h__incl.md5  Location_8h.tex  Location_8h__dep__incl.md5  Location_8h__incl.md5  RoadFighterGame_8h.tex  RoadFighterGame_8h__dep__incl.md5  RoadFighterGame_8h__incl.md5  annotated.tex  classClock.tex  classObservable.tex  classObservable__inherit__graph.md5  classObserverBase.tex  classObserverBase__inherit__graph.md5  classRandom.tex  classSFMLBonusCar.tex  classSFMLBonusCar__coll__graph.md5  classSFMLBonusCar__inherit__graph.md5  classSFMLBullet.tex  classSFMLBullet__coll__graph.md5  classSFMLBullet__inherit__graph.md5  classSFMLEnd.tex  classSFMLEnd__coll__graph.md5  classSFMLEnd__inherit__graph.md5  classSFMLEntitySprite.tex  classSFMLEntitySprite__coll__graph.md5  classSFMLEntitySprite__inherit__graph.md5  classSFMLPassingCar.tex  classSFMLPassingCar__coll__graph.md5  classSFMLPassingCar__inherit__graph.md5  (+252 more)
gtest/include/gtest/: gtest-param-test.h.pump
